predict component